# esp32s3-hardhat-detector

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/board_config/include/: xiao_pins.h
components/camera/: CMakeLists.txt  camera_interface.c
components/camera/include/: camera_interface.h
main/: CMakeLists.txt  hardhat_model.espdl  idf_component.yml  main.cpp
